# Openterface_Core

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
cli/: input_cli.c  keymod_cli.c
docs/: TEST_PLAN.md
include/: keymod.h
include/openterface/: capability.h  chip.h  core.h  core_native.h  device.h  hid.h  input.h  native_common.h  profile.h  protocol_ch9329.h  status.h  transport.h  usb_mode.h  version.h  video_status.h  watchdog.h
src/: core_native.c  keymod.c  keymod_hid.c  keymod_internal.h  keymod_packets.c  keymod_parser.c
src/capability/: capability.c
src/chip/: chip_detector.c  video_chip_controller.c  video_chip_controller_internal.h
src/core/: version.c
src/device/: device_info.c
src/hid/: hid_device_session.c  hid_internal.h  hid_transaction_guard.c
src/input/: input_event.c  input_hid.c  input_internal.h  input_packet.c  input_parser.c
src/platform/: platform_backend.c  platform_backend.h  platform_linux.c  platform_stub.c  platform_windows.c
src/profile/: profile.c
src/protocol/ch9329/: protocol_ch9329.c
src/transport/: transport.c
src/usb_mode/: usb_mode_controller.c  usb_mode_internal.h  usb_mode_ms21xx.c  usb_mode_serial.c
src/video_status/: video_status_poller.c
src/watchdog/: connection_watchdog.c
tests/: core_skeleton_test.c  input_test.c  key_test_plan.c  keymod_test.c  native_core_test.c  watchdog_test.c
